tests/rosetta/out/Pascal/additive-primes.error
fpc: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /tmp/additive-primes.pas
additive-primes.pas(35,8) Note: Call to subroutine "operator :=(const source:LongInt):Variant;" marked as inline is not inlined
additive-primes.pas(36,9) Note: Call to subroutine "operator >(const op1:Variant;const op2:Variant):Boolean;" marked as inline is not inlined
additive-primes.pas(36,12) Note: Call to subroutine "operator :=(const source:ShortInt):Variant;" marked as inline is not inlined
additive-primes.pas(38,12) Note: Call to subroutine "operator :=(const source:Variant):LongInt;" marked as inline is not inlined
additive-primes.pas(38,12) Note: Call to subroutine "operator +(const op1:Variant;const op2:Variant):Variant;" marked as inline is not inlined
additive-primes.pas(38,12) Note: Call to subroutine "operator :=(const source:LongInt):Variant;" marked as inline is not inlined
additive-primes.pas(38,12) Note: Call to subroutine "operator mod(const op1:Variant;const op2:Variant):Variant;" marked as inline is not inlined
additive-primes.pas(38,16) Note: Call to subroutine "operator :=(const source:ShortInt):Variant;" marked as inline is not inlined
additive-primes.pas(39,25) Note: Call to subroutine "operator :=(const source:Int64):Variant;" marked as inline is not inlined
additive-primes.pas(39,24) Note: Call to subroutine "operator :=(const source:Variant):Extended;" marked as inline is not inlined
additive-primes.pas(39,24) Note: Call to subroutine "operator div(const op1:Variant;const op2:Variant):Variant;" marked as inline is not inlined
additive-primes.pas(39,18) Note: Call to subroutine "operator :=(const source:ShortInt):Variant;" marked as inline is not inlined
additive-primes.pas(61,12) Error: Incompatible types: got "ShortInt" expected "<procedure variable type of function(Variant):LongInt is nested;Register>"
additive-primes.pas(69,22) Error: Operator is not overloaded: "<procedure variable type of function(Variant):LongInt is nested;Register>" + "ShortInt"
additive-primes.pas(74,17) Error: Identifier not found "_sliceString"
additive-primes.pas(88,25) Error: Incompatible type for arg no. 1: Got "<procedure variable type of function(Variant):LongInt is nested;Register>", expected "QWord"
additive-primes.pas(108) Fatal: There were 4 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
